Cập nhật và sửa lỗi

--- a/project/Nhanvien/templates/Nhanvien/home_NV.html
+++ b/project/Nhanvien/templates/Nhanvien/home_NV.html
@@ -34,8 +34,7 @@
                 <div class="container-fluid">
                     <span class="navbar-brand">
                         <a href="{% url 'home' %}">
-                            <img src="{% static 'home/images/anh001.png' %}" width="50" height="50" alt="Logo">
-                        </a>
+                            <img src="{% static 'Nhanvien/images/logo.png'%}" width="50" height="50" alt="Logo">
                     </span>
                 </div>
             </nav>
@@ -90,14 +89,7 @@
         </div>
     </div>
   </main>
-  <!--Footer-->
-  <footer class="mt-4">
-    <p>Hotline: 9999909999</p>
-    <p>&copy; 2025 Web chăm sóc thú cưng.</p>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    
-<!-- Footer -->
+  
 <footer class="footer mt-5">
   <div class="container-fluid col-10">
       <div class="row pt-3 pb-3">
