--- a/project/Nhanvien/templates/Nhanvien/pet.html
+++ b/project/Nhanvien/templates/Nhanvien/pet.html
@@ -11,8 +11,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quản lý Booking</title>
 </head>
-
-
 <body>
     <!-- Header -->
     <header>
@@ -29,8 +27,8 @@
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
                     <span class="navbar-brand">
-                        <a href="{% url 'home' %}">
-                            <img src="{% static 'home/images/anh001.png' %}" width="50" height="50" alt="Logo">
+                        <a href="{% url 'home_NV' %}">
+                            <img src="{% static 'Nhanvien/images/logo.png'%}" width="50" height="50" alt="Logo">
                         </a>
                     </span>
                 </div>
