--- a/project/CNPM/Nhanvien/templates/Nhanvien/room.html
+++ b/project/CNPM/Nhanvien/templates/Nhanvien/room.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'Nhanvien/css/Nhanvien.css' %}">
+    <link rel="stylesheet" href="{% static 'Nhanvien/css/NV.css' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quản lý Booking</title>
 </head>
