--- a/project/CNPM/home/templates/home/homeBS.html
+++ b/project/CNPM/home/templates/home/homeBS.html
@@ -9,7 +9,7 @@
     />
     {% load static %}
 
-    <link href="{% static 'home/css/bacsi.css' %}" rel="stylesheet" />
+    <link href="{% static 'home/css/style.css' %}" rel="stylesheet" />
     <title>Bác sĩ thú y</title>
   </head>
   <body>
