--- a/project/CNPM/home/templates/home/index.html
+++ b/project/CNPM/home/templates/home/index.html
@@ -1,13 +1,5 @@
 <!DOCTYPE html>
 <html lang="vi">
-  <header>
-    <img
-      src="{{ url_for('static', filename='images/logo.png') }}"
-      alt="Logo"
-      class="logo"
-    />
-  </header>
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,6 +7,9 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'home/css/style.css' %}" />
   </head>
+  <header>
+    <img src="{% static 'home/images/anh001.png'%}" alt="Logo" class="logo" />
+  </header>
   <body>
     <div class="container">
       <header>
