--- a/project/CNPM/home/templates/home/record_medical.html
+++ b/project/CNPM/home/templates/home/record_medical.html
@@ -1,4 +1,4 @@
-{% extends 'home/base.html' %} {% block content %}
+{% extends 'home/homeBS.html' %} {% block content %}
 <div class="container mt-5">
   <h2>Ghi nhận hồ sơ khám bệnh</h2>
   {% if success_message %}
