--- a/project/CNPM/home/templates/home/thucan.html
+++ b/project/CNPM/home/templates/home/thucan.html
@@ -918,7 +918,7 @@
                 </div>
               </div>
             </section>
-            <section class="cart gh container mt-5">
+            <section class="cart container mt-5">
               <h2 class="text-center fw-bold">Cart</h2>
 
               <table class="table table-bordered text-center align-middle">
