--- a/project/CNPM/home/static/home/css/login.css
+++ b/project/CNPM/home/static/home/css/login.css
@@ -81,3 +81,14 @@ body {
   color: rgb(246, 160, 171);
   }
 
+  .alert {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    display: none;
+  }
+  .alert.success { background-color: #4CAF50; color: white; }
+  .alert.error { background-color: #f44336; color: white; }
+  
