--- a/project/CNPM/home/static/home/css/nhanvien.css
+++ b/project/CNPM/home/static/home/css/nhanvien.css
@@ -9,7 +9,10 @@ body {
     padding: 0;
     background-color: #f5f5f5;
 }
-
+.bgtop1{
+    background-color: rgb(40, 126, 98);
+    color: #ffffffee;
+    }
 .container {
     width: 80%;
     margin: auto;
@@ -118,22 +121,33 @@ tr:hover {
 }
 
 /* Footer */
-.footer {
-    text-align: center;
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
-    margin-top: 20px;
-}
-
 /* Responsive */
 @media (max-width: 768px) {
     .container {
         width: 100%;
         padding: 0 10px;
     }
-
-    .footer {
-        font-size: 14px;
-    }
 }
+.footer{
+    text-decoration: none;
+    /* background-color: rgb(40, 126, 98); */
+    color:#ffffffee;
+    font-size: 14px;
+    text-align: center;
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    margin-top: 20px;
+  }
+.footer ul li{
+    text-decoration: none;
+    list-style-type: none;
+    }
+.footer a{
+      text-decoration: none;
+    color: #ffffffee;
+    }
+.footer ul li a:hover {
+      text-decoration: none;
+    color: rgb(246, 160, 171);
+    }
