--- a/project/CNPM/home/templates/home/inpatient_care.html
+++ b/project/CNPM/home/templates/home/inpatient_care.html
@@ -1,4 +1,4 @@
-{% extends 'app/base.html' %} {% block content %}
+{% extends 'home/homeBS.html' %} {% block content %}
 <div class="container mt-5">
   <h2>Danh sách thú cưng nhập viện</h2>
   <table class="table table-bordered">
