--- a/project/CNPM/home/templates/home/schedule.html
+++ b/project/CNPM/home/templates/home/schedule.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quản lý Lịch Khám</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'home/css/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'home/css/nhanvien.css' %}" />
   </head>
   <body>
     <div class="container">
