--- a/project/CNPM/Nhanvien/templates/Nhanvien/booking.html
+++ b/project/CNPM/Nhanvien/templates/Nhanvien/booking.html
@@ -8,9 +8,9 @@
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
-                <th>Pet Name</th>
-                <th>Owner Name</th>
-                <th>Appointment Date</th>
+                <th>Tên thú cưng</th>
+                <th>Tên khách hàng</th>
+                <th>Ngày đặt lịch</th>
             </tr>
         </thead>
         <tbody>
