--- a/project/CNPM/home/templates/home/home.html
+++ b/project/CNPM/home/templates/home/home.html
@@ -10,7 +10,7 @@
     <link
       rel="icon"
       type="C:\Users\ASUS\OneDrive\Hình ảnh\anhthe\z5717362567455_8a9cf8677f35c17a38182cfa4020cd7b.jpg/x-icon"
-      href="{/C:\Users\ASUS\OneDrive\Hình ảnh\anhthe\z5717362567455_8a9cf8677f35c17a38182cfa4020cd7b.jpg/favicon.ico"
+      href="/C:\Users\ASUS\OneDrive\Hình ảnh\anhthe\z5717362567455_8a9cf8677f35c17a38182cfa4020cd7b.jpg/favicon.ico"
     />
     <title>Pet Health Care</title>
     <meta charset="utf-8" />
